# Corewar

./: .gitignore  CMakeLists.txt  Makefile  author  bocal.s
asm/: Makefile  asm  asm.c  asm_init.c  asm_init_and_file_output.c  check_argument.c  check_command.c  cleaning.c  commands_list.c  cook_l_arg.c  dump_output.c  error_functions.c  extra.c  functions.c  functions_2.c  functions_3.c  functions_4.c  functions_5.c  get_champs_description.c  get_champs_name.c  get_error_code.c  globals.c  helpers.c  hex_converters.c  jumper.cor  make_description.c  make_file_output.c  make_hex_name_and_desc.c  make_name_and_description.c  make_name_desc_functions.c  make_name_desc_functions_2.c  print_commands.c  print_dump_output.c  print_errors.c  read_dir.c  read_direct_label.c  read_dot_instr.c  read_indirect.c  read_indirect_label.c  read_register.c  (+2 more)
asm/disassembler/: disassembler.c  init_and_getters.c  read_args_and_code.c  read_header.c  set_args_and_writers.c
asm/includes/: asm.h  op.h
asm/srcs/: asm.c  errors_functions.c  functions.c
common/: common_1.c  read_header.c  read_header_helpers.c  read_headers.c
corewar/: Makefile  advance_car.c  announce_winner.c  champ_colors.c  clone_car.c  corewar.c  create_car.c  dump_memory.c  error.c  errors.c  execute_operation.c  get_arg_size.c  get_champ_by_id.c  get_opt_bonus.c  get_opt_champs.c  get_opt_dump.c  get_reg.c  get_value.c  globals.c  helpers_1.c  interactive_get.c  list.c  load_champs.c  op_add.c  op_aff.c  op_and.c  op_fork.c  op_ld.c  op_ldi.c  op_lfork.c  op_live.c  op_lld.c  op_lldi.c  op_or.c  op_st.c  op_sti.c  op_sub.c  op_xor.c  op_zjmp.c  operations.c  (+15 more)
corewar_VM/: Makefile  corewar.h  incom_arguments.c  initialize.c  op.h  operation_initialize.c  parce_file.c
corewar_VM/structure_tricks/: struct_process_clean.c  struct_tricks.c
inc/: asm.h  common.h  corewar.h
includes/: arguments.h  asm.h  common.h  corewar.h  errors.h  globals.h  op.h
libft/: Makefile
libft/ft_printf/: extra_functions.c
libft/get_next_line/: get_next_line.c
libft/includes/: ft_printf.h  get_next_line.h  libft.h
libft/srcs/: ft_atoi_base.c  ft_get_substr_index.c  ft_itoa_base_for_hex.c  ft_putchar.c  ft_putchar_fd.c  ft_putchar_fd_wo_check.c  ft_strtrim.c
resources/champs/: 42.cor  42.s
resources/example/: s.txt
resourses/champs/: 42.s  lde.cor  leeloo.s  t.s
resourses/champs/championships/2014/cdivry/: youforkmytralala.s
resourses/example/: cor.txt
src/asm/: check_command.c  functions.c  functions_4.c  get_champs_description.c  get_champs_name.c  get_error_code.c  globals.c  helpers.c  hex_converters.c  long_name_and_desc_error.c  make_hex_name_and_desc.c  make_name_desc_functions.c  print_errors.c  read_dir.c
src/asm/disassembler/: read_header.c
src/common/: parse_int.c
src/corewar/: get_opt_dump.c  get_reg.c  interactive_get.c  load_champs.c  op_ld.c  op_live.c  op_lld.c  op_sub.c  perform_check.c  perform_cycle.c  read_champ_header.c  read_from_field.c  set_champ_ids.c
vm/: usage_vm
vm/libft/: ft_strsplit.c
vm/vm_includes/: op.h  op_vm.h  vm.h
vm/vm_src/: execute_operation.c  fail.c  get_arg_size.c  get_arg_value.c  get_reg.c  get_value.c  move_car_body.c  one_more_car.c  op_add.c  op_aff.c  op_and.c  op_fork.c  op_ld.c  op_ldi.c  op_lfork.c  op_live.c  op_lld.c  op_lldi.c  op_or.c  op_st.c  op_sti.c  op_sub.c  op_xor.c  op_zjmp.c  operations.c  ops.c  output_result.c  read_from_field.c  replace_c.c  rewrite_field.c  show_usage.c  start_data.c  take_amount_by_class.c  take_arg_by_class.c  take_arg_from_field.c  take_arg_place.c  take_size_by_class.c  write_to_field.c
