cmake_minimum_required(VERSION 3.12)
project(Corewar C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

set(LIBFT
        libft/ft_printf/ft_abs.c
        libft/ft_printf/ft_floor_l.c
        libft/ft_printf/ft_max.c
        libft/ft_printf/ft_min.c
        libft/ft_printf/ft_parse_number.c
        libft/ft_printf/ft_printf.c
        libft/ft_printf/ft_putnchar.c
        libft/ft_printf/ft_utf8_len.c
        libft/ft_printf/pf_converters.c
        libft/ft_printf/pf_count_zeroes.c
        libft/ft_printf/pf_parse_format.c
        libft/ft_printf/pf_print_alpha.c
        libft/ft_printf/pf_print_float.c
        libft/ft_printf/pf_print_pointer.c
        libft/ft_printf/pf_print_signed.c
        libft/ft_printf/pf_print_unsigned.c
        libft/get_next_line/get_next_line.c
        libft/includes/ft_printf.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/srcs/ft_atoi.c
        libft/srcs/ft_bzero.c
        libft/srcs/ft_isalnum.c
        libft/srcs/ft_isalpha.c
        libft/srcs/ft_isascii.c
        libft/srcs/ft_isdigit.c
        libft/srcs/ft_islower.c
        libft/srcs/ft_isprint.c
        libft/srcs/ft_isupper.c
        libft/srcs/ft_itoa.c
        libft/srcs/ft_itoa_base.c
        libft/srcs/ft_lstadd.c
        libft/srcs/ft_lstdel.c
        libft/srcs/ft_lstdelone.c
        libft/srcs/ft_lstiter.c
        libft/srcs/ft_lstmap.c
        libft/srcs/ft_lstnew.c
        libft/srcs/ft_memalloc.c
        libft/srcs/ft_memccpy.c
        libft/srcs/ft_memchr.c
        libft/srcs/ft_memcmp.c
        libft/srcs/ft_memcpy.c
        libft/srcs/ft_memdel.c
        libft/srcs/ft_memmove.c
        libft/srcs/ft_memset.c
        libft/srcs/ft_putchar.c
        libft/srcs/ft_putchar_fd.c
        libft/srcs/ft_putendl.c
        libft/srcs/ft_putendl_fd.c
        libft/srcs/ft_putnbr.c
        libft/srcs/ft_putnbr_fd.c
        libft/srcs/ft_putstr.c
        libft/srcs/ft_putstr_fd.c
        libft/srcs/ft_strcat.c
        libft/srcs/ft_strchr.c
        libft/srcs/ft_strclr.c
        libft/srcs/ft_strcmp.c
        libft/srcs/ft_strcpy.c
        libft/srcs/ft_strdel.c
        libft/srcs/ft_strdup.c
        libft/srcs/ft_strequ.c
        libft/srcs/ft_striter.c
        libft/srcs/ft_striteri.c
        libft/srcs/ft_strjoin.c
        libft/srcs/ft_strlcat.c
        libft/srcs/ft_strlen.c
        libft/srcs/ft_strlower.c
        libft/srcs/ft_strmap.c
        libft/srcs/ft_strmapi.c
        libft/srcs/ft_strncat.c
        libft/srcs/ft_strncmp.c
        libft/srcs/ft_strncpy.c
        libft/srcs/ft_strnequ.c
        libft/srcs/ft_strnew.c
        libft/srcs/ft_strnstr.c
        libft/srcs/ft_strrchr.c
        libft/srcs/ft_strsplit.c
        libft/srcs/ft_strstr.c
        libft/srcs/ft_strsub.c
        libft/srcs/ft_strtrim.c
        libft/srcs/ft_strupper.c
        libft/srcs/ft_swap_bits32.c
        libft/srcs/ft_swap_bits64.c
        libft/srcs/ft_tolower.c
        libft/srcs/ft_toupper.c
        libft/srcs/is_only_digits.c
        libft/srcs/ft_atoi_base.c
        libft/srcs/ft_putchar_fd_wo_check.c
        libft/srcs/ft_get_substr_index.c
        libft/srcs/ft_itoa_base_for_hex.c)

add_executable(asm
        src/asm/asm.c
        src/asm/asm_init_and_file_output.c
        src/asm/check_argument.c
        src/asm/check_command.c
        src/asm/cleaning.c
        src/asm/cook_l_arg.c
        src/asm/dump_output.c
        src/asm/error_functions.c
        src/asm/functions.c
        src/asm/functions_2.c
        src/asm/functions_3.c
        src/asm/functions_4.c
        src/asm/get_error_code.c
        src/asm/globals.c
        src/asm/helpers.c
        src/asm/hex_converters.c
        src/asm/long_name_and_desc_error.c
        src/asm/make_hex_name_and_desc.c
        src/asm/make_name_desc_functions.c
        src/asm/make_name_desc_functions_2.c
        src/asm/get_champs_name.c
        src/asm/get_champs_description.c
        src/asm/print_commands.c
        src/asm/print_dump_output.c
        src/asm/print_errors.c
        src/asm/read_dir.c
        src/asm/read_direct_label.c
        src/asm/read_dot_instr.c
        src/asm/read_indir.c
        src/asm/read_indirect_label.c
        src/asm/read_register.c
        src/asm/read_string.c
        src/asm/disassembler/disassembler.c
        src/asm/disassembler/init_and_getters.c
        src/asm/disassembler/read_args_and_code.c
        src/asm/disassembler/read_header.c
        src/asm/disassembler/set_args_and_writers.c

        ${LIBFT} src/common/parse_int.c)

add_executable(corewar
        src/corewar/advance_car.c
        src/corewar/announce_winner.c
        src/corewar/champ_colors.c
        src/corewar/clone_car.c
        src/corewar/corewar.c
        src/corewar/create_car.c
        src/corewar/dump_memory.c
        src/corewar/error.c
        src/corewar/execute_operation.c
        src/corewar/get_arg_size.c
        src/corewar/get_champ_by_id.c
        src/corewar/get_opt_bonus.c
        src/corewar/get_opt_champs.c
        src/corewar/get_opt_dump.c
        src/corewar/get_reg.c
        src/corewar/get_value.c
        src/corewar/interactive_get.c
        src/corewar/list.c
        src/corewar/load_champs.c
        src/corewar/op_add.c
        src/corewar/op_aff.c
        src/corewar/op_and.c
        src/corewar/op_fork.c
        src/corewar/op_ld.c
        src/corewar/op_ldi.c
        src/corewar/op_lfork.c
        src/corewar/op_live.c
        src/corewar/op_lld.c
        src/corewar/op_lldi.c
        src/corewar/op_or.c
        src/corewar/op_st.c
        src/corewar/op_sti.c
        src/corewar/op_sub.c
        src/corewar/op_xor.c
        src/corewar/op_zjmp.c
        src/corewar/operations.c
        src/corewar/perform_battle.c
        src/corewar/perform_check.c
        src/corewar/perform_cycle.c
        src/corewar/perform_round.c
        src/corewar/read_champ_header.c
        src/corewar/read_champs.c
        src/corewar/read_from_field.c
        src/corewar/set_champ_ids.c
        src/corewar/show_usage.c
        src/corewar/write_to_field.c

        ${LIBFT} src/common/parse_int.c)
